--- a/backend/.env
+++ b/backend/.env
@@ -4,3 +4,8 @@ MYSQL_USER=root
 MYSQL_PASSWORD=
 
 CLOUDINARY_URL=cloudinary://291922628566477:_bvXRcNlcB_LHtM7xUb-Rb_zoEE@dlw8jnx52
+
+SMTP_HOST=sandbox.smtp.mailtrap.io
+SMTP_PORT=2525
+SMTP_USER=8b86420d96606c
+SMTP_PASS=085fa41b9180cb
